WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202829
Guard GCrypt-specific code with USE(GCRYPT) instead of PLATFORM macros
https://bugs.webkit.org/show_bug.cgi?id=202829
Summary
Guard GCrypt-specific code with USE(GCRYPT) instead of PLATFORM macros
Konstantin Tokarev
Reported
2019-10-10 16:23:19 PDT
Guard GCrypt-specific code with USE(GCRYPT) instead of PLATFORM(GTK) || PLATFORM(WPE)
Attachments
Patch
(1.99 KB, patch)
2019-10-10 16:27 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2019-10-10 16:27:15 PDT
Created
attachment 380695
[details]
Patch
Jiewen Tan
Comment 2
2019-10-10 19:43:54 PDT
Comment on
attachment 380695
[details]
Patch LGTM. r=me.
Konstantin Tokarev
Comment 3
2019-10-10 19:47:26 PDT
Comment on
attachment 380695
[details]
Patch Clearing flags on attachment: 380695 Committed
r251000
: <
https://trac.webkit.org/changeset/251000
>
Konstantin Tokarev
Comment 4
2019-10-10 19:47:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-10-10 19:48:15 PDT
<
rdar://problem/56178648
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug