Guard GCrypt-specific code with USE(GCRYPT) instead of PLATFORM macros https://bugs.webkit.org/show_bug.cgi?id=202829

Reviewed by Jiewen Tan.

* crypto/keys/CryptoKeyEC.h:
* crypto/keys/CryptoKeyRSA.h:


Canonical link: https://commits.webkit.org/216290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251000 268f45cc-cd09-0410-ab3c-d52691b4dbfc